# wavToMp3

./: .gitignore  CMakeLists.txt  CppCheckSuppressions.txt  INSTALL  README.md
doc/: architecutre_Design.graphml
src/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Encoder.cpp  Encoder.h  FileEncodingTask.cpp  FileEncodingTask.h  FileSystem.cpp  FileSystem.h  Formats.h  LameEncoder.cpp  LameEncoder.h  Parser.cpp  Parser.h  ReadFile.cpp  ReadFile.h  SampleConverter.cpp  SampleConverter.h  WriteFile.cpp  WriteFile.h  main.cpp
test/: ArgumentParserTest.cpp  CMakeLists.txt  ConverterTest.cpp  EncoderTest.cpp  FileEncodingTaskTest.cpp  FileStructureTest.cpp  FileSystemTest.cpp  LameEncodingFileTest.cpp  ParserTest.cpp  ReadFileTest.cpp  TestWaveData.cpp  TestWaveData.h  WriteFileTest.cpp  tests.cpp
testscripts/: runUnitTest.sh  runValgrindCheck.sh  runWavToMp3.sh
